# tdd_exercise

./: .pre-commit-config.yaml  pyproject.toml  setup.cfg  setup.sh
src/: money.py
test/: test_money.py
