[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
readme = "README.md"
authors = ["yoshihisa_furusawa"]


[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"

[tool.poetry.group.precommit.dependencies]
pre-commit = "^2.20.0"
nbqa = "^1.7.0"
isort = "^5.12.0"
black = "^23.3.0"

[tool.isort]
profile = "black"
known_local_folder = ["src"]
line_length = 88
multi_line_output = 3
include_trailing_comma = true

[tool.black]
line-length = 88

[tool.poetry.dependencies]
python = "3.9.15"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
